third_party/move/tools/move-asm/tests/assembler/undef_local.exp
processed 1 task

task 0 'publish'. lines 1-7:
Error: error: unknown local `z`
  ┌─ test:5:5
  │
5 │     copy_loc z
  │     ^^^^^^^^^^


